--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,8 @@
 <!-- views/home.handlebars -->
 {{#if user}}
   <div class="jumbotron">
-    <h1>MongoDB User Authentication</h1>
-    <p>Below is your profile information!</p>
+    <h1>Twitter-json User Authentication</h1>
+    <p>Below is your profile information (maybe in a day or two)</p>
   </div>
   <div class="panel panel-default">
     <div class="panel-heading">
@@ -16,8 +16,8 @@
 
 {{else}}
   <div class="jumbotron">
-    <h1>MongoDB User Authentication</h1>
-    <p>Sign in and view your profile!</p>
+    <h1>Twitter-json User Authentication</h1>
+    <p>Sign in and view your profile (or errors, mostly errors)</p>
     <p>
       <a href="/signin" class="btn btn-primary btn-lg" role="button">
         <span class="glyphicon glyphicon-user"></span>
