added local signup and signin

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,7 +10,7 @@
     </div>
     <div class="panel-body">
       <p>Username: {{user.username}}</p>
-      <p>Avatar: <img src="{{user.avatar}}"/></p>
+      <p>Avatar: <img src="{{user.avatar}}" width="40" height="40"/></p>
     </div>
   </div>
 
