--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,10 +5,16 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="User Authentication">
+  <meta name="description" content="Twitter JSON aws-app">
   <meta name="author" content="">
-
-  <title>User Authentication</title>
+  <style>
+    label {
+      display: inline-block;
+      width: 140px;
+      text-align: right;
+          }
+  </style>     ​
+  <title>Twitter JSON aws-app</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
