--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -32,12 +32,16 @@
   <form id="local-reg" class="collapse" action="/local-reg" method="post">
     <div>
         <p></p>
-        <label>New Username:</label>
+        <label>New Username: </label>
         <input type="text" name="username"/>
     </div>
     <div>
-        <label>New Password:</label>
+        <label>New Password: </label>
         <input type="password" name="password"/>
+    </div>
+    <div>
+        <label>Email:</label>
+        <input type="email" name="email"/>
     </div>
     <div>
         <input type="submit" class="btn btn-primary btn-sm" value="Register"/>
