--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -11,6 +11,7 @@
     <div class="panel-body">
       <p>Username: {{user.username}}</p>
       <p>Avatar: <img src="{{user.avatar}}" width="40" height="40"/></p>
+      <p> Email : {{user.email}} </p>
     </div>
   </div>
 
