--- a/views/totp.handlebars
+++ b/views/totp.handlebars
@@ -11,6 +11,7 @@
         <h4>{{ strings.enableTotp }}</h4>
         {{#unless key}}
             <form action="/totp-setup" method="post">
+                <label>you sure? </label>
                 <input type="checkbox" name="totp" onchange="this.form.submit()">
             </form>
         {{else}}
@@ -21,6 +22,12 @@
             <h4>{{strings.qrSetupSteps}}</h4>
 
             <img src="{{ Url }}" alt="{{ key }}">
+
+            <h3>{{ strings.enterCode }}</h3>
+            <form action="/totp-input" method="post">
+              <input type="text" name="code" placeholer="{{ strings.enterCode }}">
+              <input type="submit">
+            </form>
         {{/unless}}
 
     </div>
