--- a/views/totp.handlebars
+++ b/views/totp.handlebars
@@ -16,6 +16,7 @@
             </form>
         {{else}}
             <form action="/totp-setup" method="post">
+               <label>you sure? </label>
                 <input type="checkbox" name="totp" checked onchange="this.form.submit()">
             </form>
 
