Added disabling otp option

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -16,6 +16,10 @@
       <a href="/totp-setup" class="btn btn-primary btn-lg" role="button">
         Enable OTP
       </a>
+      {{else}}
+      <a href="/totp-disable" class="btn btn-primary btn-lg" role="button">
+        Disable OTP
+      </a>
       {{/unless}}
     </div>
 
