Added profile page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,6 +42,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li>
+              <a href="/">Home Logo</a>
+            </li>
+            <li>
               {{#if user}}
                 <p class="navbar-text">
                   <strong>Hi,</strong>
@@ -51,6 +54,11 @@
                 </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                  <li>
+                    <a href="/profile">
+                      <span class="glyphicon glyphicon-cog"></span>
+                    </a>
+                  </li>
                   <li>
                     <a href="/logout">Log Out</a>
                   </li>
