--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,39 +1,14 @@
-<!-- views/home.handlebars -->
-{{#if user}}
-  <div class="jumbotron">
-    <h1>Twitter-json User Authentication</h1>
-    <p>Below is your profile information (maybe in a day or two)</p>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">Profile Information</h3>
-    </div>
-    <div class="panel-body">
-      <p>Username: {{user.username}}</p>
-      <p>Avatar: <img src="{{user.avatar}}" width="40" height="40"/></p>
-      <p> Email : {{user.email}} </p>
-      {{#unless user.key}}
-      <form action="/totp-setup" method="post">
-        <input type="Submit" class="btn btn-primary btn-lg" value="Enable OTP">
-      </form>
-      {{else}}
-      <a href="/totp-disable" class="btn btn-primary btn-lg" role="button">
-        Disable OTP
-      </a>
-      {{/unless}}
-    </div>
-
-
-{{else}}
-  <div class="jumbotron">
-    <h1>Twitter-json User Authentication</h1>
-    <p>Sign in and view your profile (or errors, mostly errors)</p>
-    <p>
-      <a href="/signin" class="btn btn-primary btn-lg" role="button">
-        <span class="glyphicon glyphicon-user"></span>
-        Sign in!
-      </a>
-    </p>
-  </div>
-
-{{/if}}
+<div class="jumbotron">
+  {{#unless user}}
+  <h1>Twitter-json User Authentication</h1>
+  <p>Sign in and view your profile (or errors, mostly errors)</p>
+  <p>
+    <a href="/signin" class="btn btn-primary btn-lg" role="button">
+      <span class="glyphicon glyphicon-user"></span>
+      Sign in!
+    </a>
+  </p>
+  {{ else }}
+  <h1> Our home where posts should appear... anytime now</h1>
+  {{/unless}}
+</div>
