Fixed bug where cancelling totp signin redirects to home instead of profile

--- a/views/totp.handlebars
+++ b/views/totp.handlebars
@@ -30,8 +30,8 @@
               <input type="text" name="code" placeholer="{{ strings.enterCode }}"><br>
               <input type="submit" value="Verify">
             </form><br>
-            <form action="/" method="post">
-              <input type="submit" href="/" class="btn btn-warning btn-lg" value="Cancel">
+            <form action="/profile" method="post">
+              <input type="submit" class="btn btn-warning btn-lg" value="Cancel">
             </form>
         {{/unless}}
       {{else}}
