--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -5,7 +5,7 @@
   <p>
     <a data-toggle="collapse" href="#local" class="btn btn-warning btn-lg" role="button"><span class="glyphicon glyphicon-user"></span> Sign in Locally</a>
     <a href="/auth/twitter" class="btn btn-info btn-lg" role="button"><span class="glyphicon glyphicon-user"></span> Sign in with Twitter</a>
-    <a href="/auth/google" class="btn btn-danger btn-lg" role="button"><span class="glyphicon glyphicon-user"></span> Sign in with Google</a>
+    <a href="/auth/google/" class="btn btn-danger btn-lg" role="button"><span class="glyphicon glyphicon-user"></span> Sign in with Google</a>
     <a href="/auth/facebook" class="btn btn-primary btn-lg" role="button"><span class="glyphicon glyphicon-user"></span> Sign in with Facebook</a>
   </p>
 
@@ -16,8 +16,8 @@
 
   <form id="local-sign-in" class="collapse" action="/signin" method="post">
     <div>
-        <label>Username:</label>
-        <input type="text" name="username"/>
+        <label>Email:</label>
+        <input type="text" name="email"/>
     </div>
     <div>
         <label>Password:</label>
@@ -28,7 +28,7 @@
     </div>
   </form>
 
-  <form id="local-reg" class="collapse" action="/local-reg" method="post">
+  <form id="local-reg" class="collapse" action="/signup" method="post">
     <div>
         <label>New Username: </label>
         <input type="text" name="username"/>
